syntax = "proto3";

option go_package = "./pb";

package pb;

message Deployment {
    optional string id = 1;
    string userId = 2;
    string namespace = 3;
    string name = 4;
    string devServiceName = 5;
    string cpu = 6;
    string memory = 7;
    int32 port = 8;
    string unlockPass = 9;
    string createdAt = 10;
    string serviceSubdomain = 12;
}

// Requests
message GetAvailableImagesRequest {
}

message GetDevServicesRequest {
    string userId = 1;
}

message GetDevServiceRequest {
    string deploymentId = 1;
}

message CreateDevServiceRequest {
    Deployment deployment = 1;
}


message DeleteDevServiceRequest {
    string deploymentId = 1;
}

message StopDevServiceRequest {
    string deploymentId = 1;
}

message StartDevServiceRequest {
    string deploymentId = 1;
}

// Responses
message GetAvailableImagesResponse {
    repeated string images = 1;
}

message GetDevServicesResponse {
    repeated Deployment deployments = 1;
}

message GetDevServiceResponse {
    Deployment deployment = 1;
}

message CreateDevServiceResponse {
    Deployment deployment = 1;
}

message DeleteDevServiceResponse {
    string message = 1;
}

message StartDevServiceResponse {
    string message = 1;
}

message StopDevServiceResponse {
    string message = 1;
}

// functionality to be added later
service DevService{
    rpc GetAvailableImages(GetAvailableImagesRequest) returns (GetAvailableImagesResponse);
    rpc GetDevServices(GetDevServicesRequest) returns (GetDevServicesResponse);
    rpc GetDevService(GetDevServiceRequest) returns (GetDevServiceResponse);
    rpc CreateDevService(CreateDevServiceRequest) returns (CreateDevServiceResponse);
    rpc DeleteDevService(DeleteDevServiceRequest) returns (DeleteDevServiceResponse);
    rpc StopDevService(StopDevServiceRequest) returns (StopDevServiceResponse);
    rpc StartDevService(StartDevServiceRequest) returns (StartDevServiceResponse);      
}
